Beta version 0.0.1 core functions test and ready

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,21 @@ src/models/__pycache__/__init__.cpython-312.pyc
 src/models/__pycache__/shape.cpython-312.pyc
 src/util/__pycache__/__init__.cpython-312.pyc
 src/util/__pycache__/dialogs.cpython-312.pyc
+src/sandbox.py
+src/sandbox2.py
+src/example/humerus(scaled).stl
+src/example/humerus(scaled_y).stl
+src/example/radius(scaled_y).stl
+src/example/sheep.py
+src/example/ulna(scaled_y).stl
+src/example/ulna(scaled_y2).stl
+src/example/ulna(scaled_y3).stl
+src/example/ulna(scaled_y4).stl
+src/example/landmarks/project.bin
+src/example/landmarks/landmarkpose/angle_95.txt
+src/example/landmarks/landmarkpose/humerus.stl
+src/example/landmarks/landmarkpose/humerus_combo.stl
+src/example/landmarks/landmarkpose/radius.stl
+src/example/landmarks/landmarkpose/radius_combo.stl
+src/example/landmarks/landmarkpose/ulna.stl
+src/example/landmarks/landmarkpose/ulna_combo.stl
