--- a/.gitignore
+++ b/.gitignore
@@ -4,33 +4,33 @@
 .idea/ssm_viewer.iml
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
-src/defaults/__pycache__/__init__.cpython-312.pyc
-src/defaults/__pycache__/viewer.cpython-312.pyc
-src/scripts/resources/wheels/ptb/latest.txt
-src/__pycache__/__init__.cpython-312.pyc
-src/defaults/__pycache__/tools.cpython-312.pyc
-src/defaults/__pycache__/widgets.cpython-312.pyc
+ssm_gui/defaults/__pycache__/__init__.cpython-312.pyc
+ssm_gui/defaults/__pycache__/viewer.cpython-312.pyc
+ssm_gui/scripts/resources/wheels/ptb/latest.txt
+ssm_gui/__pycache__/__init__.cpython-312.pyc
+ssm_gui/defaults/__pycache__/tools.cpython-312.pyc
+ssm_gui/defaults/__pycache__/widgets.cpython-312.pyc
 .idea/workspace.xml
-src/__pycache__/o3d_viewer.cpython-312.pyc
-src/models/__pycache__/__init__.cpython-312.pyc
-src/models/__pycache__/shape.cpython-312.pyc
-src/util/__pycache__/__init__.cpython-312.pyc
-src/util/__pycache__/dialogs.cpython-312.pyc
-src/sandbox.py
-src/sandbox2.py
-src/example/humerus(scaled).stl
-src/example/humerus(scaled_y).stl
-src/example/radius(scaled_y).stl
-src/example/sheep.py
-src/example/ulna(scaled_y).stl
-src/example/ulna(scaled_y2).stl
-src/example/ulna(scaled_y3).stl
-src/example/ulna(scaled_y4).stl
-src/example/landmarks/project.bin
-src/example/landmarks/landmarkpose/angle_95.txt
-src/example/landmarks/landmarkpose/humerus.stl
-src/example/landmarks/landmarkpose/humerus_combo.stl
-src/example/landmarks/landmarkpose/radius.stl
-src/example/landmarks/landmarkpose/radius_combo.stl
-src/example/landmarks/landmarkpose/ulna.stl
-src/example/landmarks/landmarkpose/ulna_combo.stl
+ssm_gui/__pycache__/o3d_viewer.cpython-312.pyc
+ssm_gui/models/__pycache__/__init__.cpython-312.pyc
+ssm_gui/models/__pycache__/shape.cpython-312.pyc
+ssm_gui/util/__pycache__/__init__.cpython-312.pyc
+ssm_gui/util/__pycache__/dialogs.cpython-312.pyc
+ssm_gui/sandbox.py
+ssm_gui/sandbox2.py
+ssm_gui/example/humerus(scaled).stl
+ssm_gui/example/humerus(scaled_y).stl
+ssm_gui/example/radius(scaled_y).stl
+ssm_gui/example/sheep.py
+ssm_gui/example/ulna(scaled_y).stl
+ssm_gui/example/ulna(scaled_y2).stl
+ssm_gui/example/ulna(scaled_y3).stl
+ssm_gui/example/ulna(scaled_y4).stl
+ssm_gui/example/landmarks/project.bin
+ssm_gui/example/landmarks/landmarkpose/angle_95.txt
+ssm_gui/example/landmarks/landmarkpose/humerus.stl
+ssm_gui/example/landmarks/landmarkpose/humerus_combo.stl
+ssm_gui/example/landmarks/landmarkpose/radius.stl
+ssm_gui/example/landmarks/landmarkpose/radius_combo.stl
+ssm_gui/example/landmarks/landmarkpose/ulna.stl
+ssm_gui/example/landmarks/landmarkpose/ulna_combo.stl
