--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ ssm_gui/example/landmarks/landmarkpose/radius.stl
 ssm_gui/example/landmarks/landmarkpose/radius_combo.stl
 ssm_gui/example/landmarks/landmarkpose/ulna.stl
 ssm_gui/example/landmarks/landmarkpose/ulna_combo.stl
+ssm_gui/build/
