--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ ssm_gui/example/landmarks/landmarkpose/radius_combo.stl
 ssm_gui/example/landmarks/landmarkpose/ulna.stl
 ssm_gui/example/landmarks/landmarkpose/ulna_combo.stl
 ssm_gui/build/
+ssm_gui/dist/
