--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ src/models/__pycache__/
 src/scripts/resources/wheels/ptb/latest.txt
 src/util/__pycache__/
 .idea/
+ssm_gui/example/test.inp
+ssm_gui/example/test.ply
